# mcp-server-with-authz

./: .env.example  Dockerfile  Dockerfile.mcp  Dockerfile.opa  Dockerfile.streamlit  QUICKSTART.md  README.md  agent.yaml  comprehensive_test.py  dataset.csv  direct_session_client.py  docker-compose.yml  high_level_client.py  mcp_test_ui.html  minimal_client.py  package.json  playwright.config.js  pyproject.toml  requirements-server.txt  requirements-streamlit.txt  requirements.txt  robust_client.py  run_streamlit_client.sh  sample_data.csv  setup.sh  simple_client.py  test_client.py  test_http_endpoints.py  tool_lister.py  very_minimal_client.py
docs/: api.md  data-flow.md  data-flow.plantuml  gcp-architecture.md  gcp-architecture.plantuml  gcp-deployment.md  mcp-architecture.plantuml
llm-chat-app/: Dockerfile  README.md  chat_app.py  requirements.txt
policies/: advanced.rego  attribute_based.rego  config.yaml  simple.rego
src/: adk_example.py  advanced_gemini_agent.py  app.py  gemini_agent.py  mcp_adk_tools.py  mcp_app.py  mcp_client.py  mcp_data_agent.py  mcp_server.py  streamlit_mcp_client.py  test_adk_tools.py
src/auth/: auth.py
src/tools/: csv_analyzer.py  csv_reader.py  opa_client.py
src/web/: app.py
tests/: test_components.py  test_example.py  test_integration.py
tests/e2e/: screenshots.spec.js
